// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Enhanced component should render with form props 1`] = `
Object {
  "form": Object {
    "fieldUpdated": Object {
      "handler": [Function],
      "stream": Object {
        "subscribe": [Function],
        Symbol(observable): [Function],
      },
    },
    "model": Immutable.Map {},
    "setField": [Function],
    "submit": [Function],
    "updateField": [Function],
  },
}
`;

exports[`Submit function receives appropriate args 1`] = `
Array [
  Object {
    "aProp": "bar",
    "form": Object {
      "fieldUpdated": Object {
        "handler": [Function],
        "stream": Object {
          "subscribe": [Function],
          Symbol(observable): [Function],
        },
      },
      "model": Immutable.Map {
        "aField": "baz",
      },
      "setField": [Function],
      "updateField": [Function],
    },
  },
  Object {
    "aField": "baz",
  },
]
`;
